--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        li {
+  display: inline;
+  display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    background-color: #04AA6D;
+}
+
+    </style>
 </head>
 <body>
+    <ul>
+        <li><a href="home.html">Home</a></li>
+        
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
     <h1>call us</h1>
+
 </body>
 </html><!DOCTYPE html>
