--- a/home.html
+++ b/home.html
@@ -18,13 +18,16 @@
 
     </style>
 </head>
-<body>
+<body >
+    
+
     <ul>
         <li><a href="home.html">Home</a></li>
         
         <li><a href="contact.html">Contact</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-      <div class="para">hi this ia about us</div>
+
+      <img src="abc.gif" alt="Girl in a jacket">
 </body>
 </html>
