--- a/about.html
+++ b/about.html
@@ -25,6 +25,6 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-      <div class="para">hi this ia about us</div>
+      <h1>hi this is about us</h1>
 </body>
 </html>
