--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-    <h1>call us</h1>
+    <h1>call us if you have any queries</h1>
 
 </body>
 </html><!DOCTYPE html>
